Sridhar (#53)
* feat: add AKS/Helm deployment infrastructure, CI/CD pipelines, Squad team config

- Root Dockerfile: multi-stage parameterized build for all 10 services
- .github/workflows/ci.yml: PR gate with smart change detection
- .github/workflows/deploy.yml: staging + production deploy pipeline (Azure OIDC)
- helm/: complete Helm chart — deployment, service, hpa, pdb, ingress, configmap, serviceaccount
- k8s/namespace.yaml: cyberlearnix-staging + cyberlearnix-prod namespaces
- scripts/setup-azure-infra.sh: one-shot Azure infra provisioning
- application.properties: enable K8s liveness/readiness probe endpoints (all 9 services)
- gateway-service/application.yml: add management actuator probe config
- .squad/: Squad v0.9.1 team configuration (Vance, Nova, Aria, Kai, Quinn, Scribe, Ralph)
- .gitattributes: union merge driver for .squad/ append-only files

* ci: replace Azure pipeline with SSH + Docker Compose deploy

* ci: replace scp with ssh+cat to fix shell output interference

* fix: add docker login on server + fix compose path (~/docker-compose.yml)

* fix: scope docker compose pull/up to our 10 services only

* feat(ci): veteran-level pipeline hardening

- platforms: linux/amd64 — locks build arch, prevents manifest mismatch
- gradle cache — saves 2-4 min per build run
- timeout-minutes: 30 build / 20 deploy — kills hung jobs
- compose up --no-build — server never tries to build locally
- post-deploy health check — fails pipeline if container crashes after up
- scoped compose ps to our 10 services only

* feat(ci): production-grade hardening — health checks, rollback, tag cleanup

Dockerfiles (all 10 services):
- Install curl in run stage (needed for HEALTHCHECK probe)
- Add HEALTHCHECK: interval=30s timeout=10s start-period=60s retries=3
  → probes /actuator/health on each service's port
  → Docker marks container 'healthy' only after Spring Boot is fully up

deploy.yml:
- Backup docker-compose.prod.yml before each deploy for rollback
- Replace sleep+poll