@@ -9,6 +9,8 @@ import com.cyberlearnix.shared.repository.form.GeneralFormResponseRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -19,6 +21,8 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class FormService {
+
+    private static final Logger log = LoggerFactory.getLogger(FormService.class);
 
     private final GeneralFormRepository formRepository;
     private final GeneralFormResponseRepository responseRepository;
@@ -141,6 +145,12 @@ public class FormService {
         duplicate.setQuiz(original.isQuiz());
         duplicate.setQuizSettings(original.getQuizSettings());
         duplicate.setLimitOneResponse(original.isLimitOneResponse());
+        duplicate.setPaymentEnabled(original.isPaymentEnabled());
+        duplicate.setCourseId(original.getCourseId());
+        duplicate.setPaymentAmount(original.getPaymentAmount());
+        duplicate.setGstPercent(original.getGstPercent());
+        duplicate.setGstAmount(original.getGstAmount());
+        duplicate.setTotalAmount(original.getTotalAmount());
         duplicate.setCreatedAt(LocalDateTime.now());
         duplicate.setUpdatedAt(LocalDateTime.now());
         return mapToResponseDTO(formRepository.save(duplicate));
@@ -188,13 +198,14 @@ public class FormService {
         response.setUserEmail(dto.getUserEmail());
         response.setSubmissionData(submissionDataJson);
         response.setCreatedAt(LocalDateTime.now());
+        response.setPaymentStatus(form.isPaymentEnabled() ? "PENDING" : "NOT_REQUIRED");
         
         if (form.isQuiz()) {
             try {
                 double totalScore = calculateQuizScore(form, response);
                 response.setScore(totalScore);
             } catch (Exception e) {
-                System.err.println("Error calculating quiz score: " + e.getMessage());
+                log.warn("Error calculating quiz score: {}", e.getMessage());
             }
         }
         
@@ -202,18 +213,21 @@ public class FormService {
 
         // Send confirmation email if user email is provided
         if (response.getUserEmail() != null && !response.getUserEmail().isEmpty()) {
-            try {
-                Map<String, Object> data = new HashMap<>();
-                data.put("recipientEmail", response.getUserEmail());
-                data.put("formTitle", form.getTitle());
-                data.put("responses", response.getSubmissionData());
-                
-                notificationClient.sendNotification("send-form-confirmation", Map.of("data", data));
-            } catch (Exception e) {
-                System.err.println("Failed to send confirmation email: " + e.getMessage());
-            }
+            sendFormConfirmationEmail(response.getUserEmail(), form.getTitle(), response.getSubmissionData());
         }
         return mapToSubmissionResponseDTO(savedResponse);
+    }
+
+    private void sendFormConfirmationEmail(String userEmail, String formTitle, String submissionData) {
+        try {
+            Map<String, Object> data = new java.util.HashMap<>();
+            data.put("recipientEmail", userEmail);
+            data.put("formTitle", formTitle);
+            data.put("responses", submissionData);
+            notificationClient.sendNotification("send-form-confirmation", Map.of("data", data));
+        } catch (Exception e) {
+            log.warn("Failed to send confirmation email: {}", e.getMessage());
+        }
     }
 
     public boolean hasAlreadyResponded(String formId, String email) {
@@ -223,7 +237,7 @@ public class FormService {
     public List<SubmissionResponseDTO> getSubmissionResponses(String formId) {
         return responseRepository.findAllByFormIdAndDeletedAtIsNull(formId).stream()
                 .map(this::mapToSubmissionResponseDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     private SubmissionResponseDTO mapToSubmissionResponseDTO(GeneralFormResponse entity) {
@@ -400,6 +414,12 @@ public class FormService {
                     .createdBy(entity.getCreatedBy())
                     .createdAt(entity.getCreatedAt())
                     .updatedAt(entity.getUpdatedAt())
+                    .paymentEnabled(entity.isPaymentEnabled())
+                    .courseId(entity.getCourseId())
+                    .paymentAmount(entity.getPaymentAmount())
+                    .gstPercent(entity.getGstPercent())
+                    .gstAmount(entity.getGstAmount())
+                    .totalAmount(entity.getTotalAmount())
                     .build();
         } catch (Exception e) {
             throw new RuntimeException("Error mapping entity to DTO: " + e.getMessage());
@@ -417,6 +437,12 @@ public class FormService {
             entity.setQuiz(dto.isQuiz());
             entity.setQuizSettings(dto.getQuizSettings() != null ? objectMapper.writeValueAsString(dto.getQuizSettings()) : null);
             entity.setLimitOneResponse(dto.isLimitOneResponse());
+            entity.setPaymentEnabled(dto.isPaymentEnabled());
+            entity.setCourseId(dto.getCourseId());
+            entity.setPaymentAmount(dto.getPaymentAmount());
+            entity.setGstPercent(dto.getGstPercent());
+            entity.setGstAmount(dto.getGstAmount());
+            entity.setTotalAmount(dto.getTotalAmount());
         } catch (Exception e) {
             throw new RuntimeException("Error serializing JSON fields: " + e.getMessage());
         }
